# Arshak-swe-itc-13

./: README.md
Arshak_Badalyan/Algorithms/18_01_2022/: main.cpp
Arshak_Badalyan/Algorithms/24_01_2022/: combinition.hpp  main.cpp
Arshak_Badalyan/Algorithms/25_01_2022/: CMakeLists.txt  main.cpp
Arshak_Badalyan/Algorithms/26_01_2022/: README.md  main.cpp
Arshak_Badalyan/Algorithms/27_01_2022/: README.md
Arshak_Badalyan/Bash/06_12_21/: cpuHistory.sh
Arshak_Badalyan/Bash/07_12_21/: factorialRec.sh  hangMan.sh
Arshak_Badalyan/Bash/08_12_21/: answerLow.txt  low.txt  middle.txt  millionaire.sh
Arshak_Badalyan/DS/10_01_2022/: queue.cpp  vector.cpp
Arshak_Badalyan/DS/13_01_2022/: README.md  binarySearch.cpp  binarySearch.hpp  main.cpp  node.cpp
Arshak_Badalyan/DataBase/16_02_2022/: database.sql
Arshak_Badalyan/DataBase/17_02_2022/: README.md
Arshak_Badalyan/DataBase/21_02_2022/: README.md  database.sql
Arshak_Badalyan/DesignPatterns/25_04_2022/: CMakeLists.txt
Arshak_Badalyan/DesignPatterns/28_04_2022/abstractFactory/: AbstractFactory.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  FactoryProducer.cpp  Rectangle.cpp  RoundedShapeFactory.cpp  RoundedShapeFactory.hpp  Square.cpp  Square.hpp  main.cpp
Arshak_Badalyan/DesignPatterns/29_04_2022/: iterator.cpp
Arshak_Badalyan/Docker/19_05_2022/: Dockerfile  README.md  index.js  package.json
Arshak_Badalyan/Docker/20_05_2022/: docker-compose.yml  package.json
Arshak_Badalyan/PRD&DOC/15_02_2022/: README.md
Arshak_Badalyan/PRD&DOC/15_02_2022/Algorithms/17_01_2022/: CMakeLists.txt  README.md  main.cpp
Arshak_Badalyan/PRD&DOC/15_02_2022/Algorithms/17_01_2022/BigOTime/: bigOTime.hpp
Arshak_Badalyan/PRD&DOC/15_02_2022/Algorithms/17_01_2022/Selection/: selectionSort.hpp
Arshak_Badalyan/Python/01_02_2022/: main.py  module.py
Arshak_Badalyan/Python/02_02_2022/: README.md
CHENGES/: README.md
CHENGES/Algorithms/19_01_2022/Search/: CMakeLists.txt  README.md
CHENGES/Algorithms/19_01_2022/Search/Exponental/: exponental.hpp
CHENGES/Algorithms/19_01_2022/Search/Quick/: quickSort.hpp
CHENGES/DesignPatterns/25_04_2022/builder/: CMakeLists.txt  builder.hpp  house.cpp  houseBuilder.cpp  manageHouse.cpp  manageHouseBuilder.hpp
CHENGES/Project Matrix/: README.md
CHENGES/django/first/: pyproject.toml
CHENGES/django/first/apps/users/: admin.py  forms.py  models.py  urls.py  views.py
CHENGES/django/first/apps/users/templates/: image_app.html
CHENGES/django/first/apps/users/templates/registration/: password_reset_complete.html  password_reset_done.html
CHENGES/django/first/apps/users/templates/users/: dashboard.html
CHENGES/django/first/myProject/: settings.py  urls.py
CHENGES/django/workspace/: pyproject.toml
CHENGES/django/workspace/apps/polls/: admin.py  models.py  urls.py  views.py
CHENGES/django/workspace/apps/polls/migrations/: 0001_initial.py  0002_user.py
CHENGES/django/workspace/apps/polls/templates/: registration.html
CHENGES/django/workspace/firstproject/: settings.py  urls.py
CHENGES/texts/: .~lock.links.ods#  email (copy).txt  email.txt  homework.txt  links.ods  readmeTemp.txt  status.txt
teams/Classwork/: README.md
teams/Samvel_Chaloyan/DS/11_01_2022/bracketsCheck/: CMakeLists.txt  main.cpp
teams/Samvel_Chaloyan/DS/11_01_2022/bracketsCheck/classNode/: CMakeLists.txt  classNode.h
teams/Samvel_Chaloyan/DS/11_01_2022/bracketsCheck/classStack/: CMakeLists.txt  classStack.cpp  classStack.h
teams/Samvel_Chaloyan/DS/11_01_2022/bracketsCheck/expCheck/: CMakeLists.txt  bracketsCheck.cpp  bracketsCheck.h
teams/Samvel_Chaloyan/Make_CMake/28_12_2021/taskCMake/: CMakeLists.txt  calc.cpp
teams/Samvel_Chaloyan/Make_CMake/28_12_2021/taskCMake/div/: CMakeLists.txt  div.cpp  div.h
teams/Samvel_Chaloyan/Make_CMake/28_12_2021/taskCMake/mod/: CMakeLists.txt  mod.cpp  mod.h
teams/Samvel_Chaloyan/Make_CMake/28_12_2021/taskCMake/prod/: CMakeLists.txt  prod.cpp  prod.h
teams/Samvel_Chaloyan/Make_CMake/28_12_2021/taskCMake/sub/: CMakeLists.txt  sub.cpp  sub.h
teams/Samvel_Chaloyan/Make_CMake/28_12_2021/taskCMake/sum/: CMakeLists.txt  sum.cpp
teams/Sevan_Shahnazaryan/Make_Cmake/28_12_2021/: CMakeLists.txt  README.md  main.cpp
teams/Sevan_Shahnazaryan/Make_Cmake/28_12_2021/div/: divi.hpp
teams/Sevan_Shahnazaryan/Make_Cmake/28_12_2021/div/sub/: sub.cpp
teams/Sevan_Shahnazaryan/Make_Cmake/28_12_2021/prod/: CMakeLists.txt  prod.cpp  prod.hpp
teams/Sevan_Shahnazaryan/Make_Cmake/28_12_2021/prod/sum/: sum.cpp
teams/Tigran_Ananyan/C++/28_12_2021/Calculator/: CMakeLists.txt  README.txt
teams/Tigran_Ananyan/C++/28_12_2021/Calculator/AskOper/: CMakeLists.txt  op.cpp
teams/Tigran_Ananyan/C++/28_12_2021/Calculator/AskOper/AskNum/: num.cpp
teams/Tigran_Ananyan/C++/28_12_2021/Calculator/AskOper/AskNum/CalcFunction/: calc.cpp  calc.hpp
(+1743 files in other folders)
