[tool.poetry]
name = "first"
version = "0.1.0"
description = "This is a registration and login task."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
Django = "^4.0.4"
psycopg2-binary = "^2.9.3"
django-extensions = "^3.1.5"
Pillow = "^9.1.0"
ipython = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
