cmake_minimum_required(VERSION 3.10)
project(Algorithms)
set(BUBBLE Bubble/bubbleSort.hpp)
set(SELECTION Selection/selectionSort.hpp)
set(INSERTION Insertion/insertionSort.hpp)
set(MERGE  Merge/mergeSort.hpp)
set(BIGOTIME  BigOTime/bigOTime.hpp)
set(PRINT Print/print.hpp)
set(TASK main.cpp)
add_executable(sorts.out ${TASK} ${PRINT} ${BIGOTIME} ${BUBBLE} ${SELECTION} ${INSERTION} ${MERGE})
